<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Courier Receiver</string>
    <string name="action_settings">Settings</string>
    <string name="host_label">Host</string>
    <string name="label_port">Port</string>
    <string name="label_token">Token</string>
    <string name="button_register">Register with Server</string>
    <string name="hint_api_host">push.hostname.com</string>
    <string name="hint_api_port">80</string>

</resources>