<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Dummy item to prevent TextView from receiving focus -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/label_api_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/host_label" />

    <EditText
        android:id="@+id/edit_text_api_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_api_host"
        android:layout_alignBottom="@+id/label_api_host"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/label_api_host"
        android:ems="10"
        android:hint="@string/hint_api_host"
        android:nextFocusLeft="@id/edit_text_api_host"
        android:nextFocusUp="@id/edit_text_api_host"
        android:singleLine="true" />

    <TextView
        android:id="@+id/label_api_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_api_host"
        android:layout_below="@+id/edit_text_api_host"
        android:layout_marginTop="20dp"
        android:text="@string/label_port" />

    <EditText
        android:id="@+id/edit_text_api_port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_api_port"
        android:layout_alignBottom="@+id/label_api_port"
        android:layout_alignLeft="@+id/edit_text_api_host"
        android:ems="10"
        android:hint="@string/hint_api_port"
        android:inputType="number" />

    <TextView
        android:id="@+id/label_api_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_api_port"
        android:layout_below="@+id/edit_text_api_port"
        android:layout_marginTop="20dp"
        android:text="@string/label_token" />

    <EditText
        android:id="@+id/edit_text_api_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_api_token"
        android:layout_alignBottom="@+id/label_api_token"
        android:layout_alignLeft="@+id/edit_text_api_port"
        android:ems="10"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edit_text_api_token"
        android:layout_below="@+id/edit_text_api_token"
        android:layout_marginTop="20dp"
        android:onClick="onClickRegisterButton"
        android:text="@string/button_register" />

    <ScrollView
        android:id="@+id/scroll_view_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_api_token"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_register"
        android:layout_marginTop="20dp"
        android:background="#000000" >

        <TextView
            android:id="@+id/text_view_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF" />
    </ScrollView>

</RelativeLayout>